--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 pyrogram
 tgcrypto
-py-tgcalls==2.2.5
+git+https://github.com/pytgcalls/pytgcalls.git@v2.2.3
 python-dotenv
 yt-dlp
 youtube-search-python
