--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 pyrogram
 tgcrypto
-git+https://github.com/pytgcalls/pytgcalls.git@v2.2.3
+git+https://github.com/pytgcalls/pytgcalls.git
 python-dotenv
 yt-dlp
 youtube-search-python
