--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 pyrogram
 tgcrypto
-git+https://github.com/pytgcalls/pytgcalls.git@master
+
+git+https://github.com/pytgcalls/pytgcalls.git
 
 python-dotenv
 yt-dlp
