--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 pyrogram
 tgcrypto
-git+https://github.com/pytgcalls/pytgcalls.git
 
+git+https://github.com/pytgcalls/pytgcalls.git@242dcb5
 
 python-dotenv
 yt-dlp
