--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 pyrogram
 tgcrypto
 
+git+https://github.com/pytgcalls/pytgcalls.git@v2.2.3
 
-git+https://github.com/pytgcalls/pytgcalls.git@b1e6c3b
+
 
 python-dotenv
 yt-dlp
