--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 pyrogram
 tgcrypto
+git+https://github.com/positive-curiosity/py-tgcalls-callsmusic.git
 
-git+https://github.com/pytgcalls/pytgcalls.git
 python-dotenv
 yt-dlp
 youtube-search-python
